www/tablet/css/fhem-tablet-ui.css
html,
body,
main,
.page {
    height: 100%;
    width: 100%;
}

main {
    overflow: auto;
}

body {
    background-color: #000000;
    font-family: "Helvetica Neue", "Helvetica", "Open Sans", "Arial", sans-serif;
    -webkit-font-smoothing: antialiased;
    font-size: small;
    color: #eeeeee;
    width: auto;
    text-align: center;
    margin: 0px;
}

@font-face {
    font-family: 'robotothin';
    src: url('../fonts/Roboto-Thin-webfont.eot');
    src: url('../fonts/Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/Roboto-Thin-webfont.woff') format('woff'), url('../fonts/Roboto-Thin-webfont.ttf') format('truetype'), url('../fonts/Roboto-Thin-webfont.svg#robotothin') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'MeteoconsRegular';
    src: url('../fonts/meteocons-webfont.eot');
    src: url('../fonts/meteocons-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/meteocons-webfont.woff') format('woff'), url('../fonts/meteocons-webfont.ttf') format('truetype'), url('../fonts/meteocons-webfont.svg#MeteoconsRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'FTUI-icons';
    src: url('../fonts/FTUI-icons.woff') format('woff'), url('../fonts/FTUI-icons.ttf') format('truetype'), url('../fonts/FTUI-icons.svg') format('svg');
    font-weight: normal;
    font-style: normal;
}

.robotothin {
    font-family: robotothin, sans-serif;
}

.fa-stack{position:relative;display:inline-block;width:2em;height:2em;line-height:2em;vertical-align:middle}
.fa-2x{font-size:2em}

[class^="ftui-"],
[class*=" ftui-"] {
    font-family: 'FTUI-icons' !important;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.ftui-mail-thin:before {
    content: "\e901";
}

.ftui-download-thin:before {
    content: "\e902";
}

.ftui-search-thin:before {
    content: "\e903";
}

.ftui-cloud-thin:before {
    content: "\e904";
}

.ftui-thermo-thin:before {
    content: "\e905";
}

.ftui-thermo:before {
    content: "\e900";
}

.ftui-door:before {
    content: "\ea00";
}

.ftui-window:before {
    content: "\ea01";
}

a:link {
    text-decoration: none;
    color: #aa6900;
}

a:visited {
    text-decoration: none;
    color: #aa6900;
}

a:hover {
    text-decoration: none;
    color: #cccccc;
}

a:active {
    text-decoration: none;
    color: #cccccc;
}

[data-type="dimmer"] > .famultibutton {
    z-index: 2;
}

*,
*:after,
*:before {
    box-sizing: border-box;
}

.btn,
.link.round,
.link.square {
    margin: 7px;
}

.btn-round,
.link.round {
    border-radius: 17px;
}

.black {
    color: #111111 !important;
}

.white {
    color: #ffffff !important;
}

.orange {
    color: #aa6900 !important;
}

.red {
    color: #ad3333 !important;
}

.green {
    color: #32a054 !important;
}

.mint {
    color: #5bc995 !important;
}

.lightblue {
    color: #6699FF !important;
}

.blue {
    color: #337ab7 !important;
}

.gray {
    color: #8C8C8C !important;
}

.yellow {
    color: #ffe066 !important;
}

.lightgray {
    color: #cccccc !important;
}

.border-black {
    border: 3px solid #111111;
}

.border-white {
    border: 3px solid #ffffff;
}

.border-orange {
    border: 3px solid #aa6900;
}

.border-red {
    border: 3px solid #ad3333;
}

.border-green {
    border: 3px solid #32a054;
}

.border-mint {
    border: 3px solid #5bc995;
}

.border-lightblue {
    border: 3px solid #6699FF;
}

.border-blue {
    border: 3px solid #337ab7;
}

.border-gray {
    border: 3px solid #8C8C8C;
}

.border-yellow {
    border: 3px solid #ffe066;
}

.border-lightgray {
    border: 3px solid #cccccc;
}

.container.round {
    border-radius: 17px;
}

.container.circular {
    border-radius: 30px;
}

.container.margin {
    margin: 7px;
}

.container.margin>.fa {
    margin-left: 7px;
}

.padding {
    padding: 7px;
}

#header-nav {
    height: 55px;
    width: 100%;
    top: 0;
    left: 0;
    -webkit-box-shadow: 0px 3px 5px rgba(150, 150, 150, 0.49);
    -moz-box-shadow: 0px 3px 5px rgba(150, 150, 150, 0.49);
    box-shadow: 0px 3px 5px rgba(150, 150, 150, 0.49);
}

#header-nav ~ .page {
    height: calc(100% - 55px);
}

@media screen and (max-width: 480px) {
    #header-nav ~ .page {
        height: 100%;
    }
}

.fixed {
    backface-visibility: hidden;
    position: fixed;
    z-index: 2;
    transition: transform 300ms ease;
}

header.fixed#header-nav + main#panel {
    margin-top: 55px;
}

section {
    border-bottom: 1px solid #888;
    padding-top: 10px;
    padding-bottom: 10px;
}


/*  gridster layout */

.gridster .row:after {
    content: "";
    display: table;
    clear: both;
    text-align: center;
    vertical-align: middle;
}

.gridster .row>div {
    vertical-align: middle;
}

.gridster [class*='col-'],
section [class*='col-'],
.row [class*='col-'],
.gridster [class='col'],
section [class='col'],
.row [class='col'] {
    display: inline-block;
    vertical-align: middle;
    height: 100%;
}

.fullsize,
.gridster > ul {
    width: 100% !important;
    height: 100% !important;
}

.gridster {
    width: 100%;
}

.gridster > * {
    margin: 0;
    padding: 0;
}

.gridster .gs_w {
    background: #FFF;
    cursor: pointer;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
}

.gridster > ul > li,
.card {
    background-color: #2A2A2A;
}

.gridster li header,
.dialog > header,
.card > header {
    background: #262626;
    color: #8c8c8c;
    display: block;
    font-size: 0.85em;
    font-weight: bold;
    line-height: 2em;
    text-align: center;
    width: 100%;
}

.gridster li header.transparent,
.dialog > header.transparent,
.card > header.transparent {
    background: transparent;
}

.gridster li header,
.dialog > header {
    cursor: move;
}
/* ... */

